--- a/app/views/questions/_question.html.erb
+++ b/app/views/questions/_question.html.erb
@@ -1,5 +1,5 @@
 <tr>
   <td> <%= link_to question.body, question_path(question), method: :get %> </td>
   <td> <%= link_to  "Изменить", edit_question_path(question), method: :get %> </td>
-  <td> <%= button_to  "Удалить", question_path(question), method: :delete, data: {confirm: 'Вы уверены?'} %> </td>
+  <td> <%= link_to "Удалить", question_path(question), data: { turbo_method: "delete", turbo_confirm: 'Вы уверены?'} %> </td>
 </tr>
