Add devise and Admin

--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -1,16 +1,9 @@
-<h1><%= t('.header')%></h1>
-<table class="table table-bordered mt-3">
-  <thead>
+<table>
   <tr>
-    <th scope="col" class="sort-by-title pointer">
-      <%= t('.title') %>
-      <%= octicon 'arrow-up', class: 'text-success hide'%>
-      <%= octicon 'arrow-down', class: 'text-success hide'%>
-    </th>
-    <th scope="col"><%= t('.level') %></th>
-    <th scope="col"><%= t('.question_count') %></th>
-    <th scope="col"><%= t('.actions') %></th>
+    <th>Название</th>
+    <th>Уровень</th>
+    <th>Количество вопросов</th>
+    <th>Действия</th>
   </tr>
-  </thead>
   <%= render @tests %>
 </table>
