Add devise and Admin

--- a/app/views/tests/_test.html.erb
+++ b/app/views/tests/_test.html.erb
@@ -1,6 +1,6 @@
 <tr>
-  <td scope="row"><%= test.title%></td>
+  <td><%= test.title%></td>
   <td><%= test.level %></td>
   <td><%= test.questions.count %></td>
-  <td><%= button_to t('.start'), start_test_path(test) %></td>
+  <td><%= button_to 'Начать', start_test_path(test) %></td>
 </tr>
