Add devise and Admin

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,7 @@
 <body>
 
 <%= render 'shared/header' %>
+<%= render 'shared/flash' %>
 <div class="main-content"><%= yield %></div>
 <%= render 'shared/footer' %>
 </body>
