--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -26,6 +26,7 @@ body{
 header{
     /* 0 flex-grow, 0 flex-shrink, auto flex-basis */
     flex: 0 0 auto;
+    min-height: 4em;
     text-align: center;
     background-color: peachpuff;
 }
@@ -59,4 +60,18 @@ a:hover {
 footer a {
     text-decoration: none;
     color: #EFEFEF;
+}
+
+
+.title {
+    text-align: left;
+    padding-left: 1em;
+    margin-top: 15px;
+    position: absolute;
+    font-size: 2em;
+}
+.right-nav-bar {
+    text-align: right;
+    margin-right: 2em;
+    margin-top:25px;
 }
