--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -3,11 +3,21 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <style>
-      /* Email styles need to be inline */
+        .mailbox {
+            border: 3px solid #F8E391;
+            padding: 10px;
+            border-radius: 5px;
+            width: 70%;
+            margin: 0 auto;
+            margin_top: 25px;
+        }
     </style>
   </head>
 
   <body>
+  <div class="mailbox">
     <%= yield %>
+  </div>
+
   </body>
 </html>
