--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -3,11 +3,11 @@
     <%= link_to  'Testguru', tests_path, method: :get %>
   </div>
   <div class="right-nav-bar">
-    <% if logged_in? %>
-      <p>Добро пожаловать, <b><%= current_user.name %></b>|
-        <%= link_to  'Выйти', session_path(session), method: :delete %></p>
+    <% if user_signed_in? %>
+      <p>Добро пожаловать, <b><%= current_user.email %></b>|
+        <%= link_to  'Выйти', destroy_user_session_path, method: :delete %></p>
     <% else %>
-      <%= link_to  'Зарегистрироваться', sign_up_path %>
+      <%= link_to  'Зарегистрироваться', new_user_registration_path %>
     <% end %>
   </div>
 </header>
