--- a/app/views/tests/_test.html.erb
+++ b/app/views/tests/_test.html.erb
@@ -1,8 +1,6 @@
 <tr>
-  <td><%= link_to test.title, test_path(test), method: :get %></td>
+  <td><%= test.title%></td>
   <td><%= test.level %></td>
   <td><%= test.questions.count %></td>
-  <td> <%= link_to  "Изменить", edit_test_path(test), method: :get %> </td>
-  <td> <%= link_to  "Удалить", test_path(test), data: { turbo_method: "delete", turbo_confirm: 'Вы уверены?'} %>
   <td><%= button_to 'Начать', start_test_path(test) %></td>
 </tr>
