--- a/app/views/layouts/admin.html.erb
+++ b/app/views/layouts/admin.html.erb
@@ -10,10 +10,8 @@
 
 <body>
 <%= render 'admin/admin_header' %>
-<div class="container">
-  <%= render 'shared/flash' %>
-  <%= yield %>
-</div>
+<%= render 'shared/flash' %>
+<div class="main-content"><%= yield %></div>
 <%= render 'shared/footer' %>
 </body>
 </html>
