--- a/app/views/shared/_flash.html.erb
+++ b/app/views/shared/_flash.html.erb
@@ -1,3 +1,3 @@
 <% flash.each do |key, message| %>
-  <%= content_tag :p, message, class: "alert #{flash_class_style(key)}", role: "alert" %>
+  <% content_tag :p, message, class: "flash #{key}" %>
 <% end %>
