--- a/app/views/admin/tests/show.html.erb
+++ b/app/views/admin/tests/show.html.erb
@@ -1,16 +1,14 @@
 <h2>Тест: <%= @test.title %></h2>
 <% if @questions.present? %>
-  <table class="table table-bordered mt-3">
-    <thead>
+  <table>
     <tr>
-      <th scope="col">Название</th>
-      <th colspan="2">Действия</th>
+      <th>Название</th>
+      <th colspan="3">Действия</th>
     </tr>
     <%= render @questions %>
-    </thead>
   </table>
 <% else %>
   <p>Нет доступных вопросов для теста</p>
 <% end %>
 <%= link_to  "Назад к тестам", admin_tests_path, method: :get %>
-<%= link_to  "Добавить вопрос", new_admin_test_question_path(@test)%>
+<%= link_to  "Добавить вопрос", new_admin_test_path(@test)%>
