--- a/app/views/admin/tests/index.html.erb
+++ b/app/views/admin/tests/index.html.erb
@@ -1,16 +1,11 @@
-<h1><%= t('.header')%></h1>
-<table class="table table-bordered mt-3">
-  <thead>
+<table>
   <tr>
-    <th scope="col"><%= t('.title') %></th>
-    <th scope="col"><%= t('.level') %></th>
-    <th scope="col"><%= t('.author') %></th>
-    <th scope="col"><%= t('.question_count') %></th>
-    <th colspan="2"><%= t('.actions') %></th>
+    <th>Название</th>
+    <th>Уровень</th>
+    <th>Автор</th>
+    <th>Количество вопросов</th>
+    <th colspan="3">Действия</th>
   </tr>
-  </thead>
-  <tbody>
   <%= render @tests %>
-  </tbody>
 </table>
-<%= link_to  t('.add_test'), new_admin_test_path %>
+<%= link_to  "Добавить тест", new_admin_test_path %>
