--- a/app/views/admin/questions/show.html.erb
+++ b/app/views/admin/questions/show.html.erb
@@ -1,12 +1,16 @@
 <h1><%= @question.body %></h1>
 <% if @answers.present? %>
-  <table>
+  <table class="table table-bordered mt-3">
+    <thead>
     <tr>
-      <th>Название</th>
-      <th>Корректность</th>
-      <th colspan="3">Действия</th>
+      <th scope="col">Название</th>
+      <th scope="col">Корректность</th>
+      <th colspan="2">Действия</th>
     </tr>
+    </thead>
+    <tbody>
     <%= render @answers %>
+    </tbody>
   </table>
 <% else %>
   <p>Нет доступных ответов для теста</p>
