Add Locale and bootstrap

--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,8 +1,8 @@
 <footer class="fixed-bottom row justify-content-center ml-3">
   <div class="col-1"><%= current_year %></p></div>
-  <div class="col">Loginov Dmitry</div>
+  <div class="col">Dmitry Loginov</div>
   <div class="col-3">Приложение для прохождения тестов</div>
-  <div class="col"><%= github_url('shrek4495', 'test') %></div>
+  <div class="col"><%= github_url('Shrek4495', 'test') %></div>
   <div class="col-4">
     <a href="https://thinknetica.com/">
       "Учебный проект в онлайн-школе Thinknetica"</a>
