--- a/app/views/tests_mailer/completed_test.en.text.erb
+++ b/app/views/tests_mailer/completed_test.en.text.erb
@@ -1,4 +1,4 @@
 Hooray!
 ======
 
-Congratulations! You completed the <%= @test.title %> test. Choose your next test <%= tests_url %>
+Congratulations! You completed the "<%= @test.title %>" test. Choose your next test <%= tests_url %>
