--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -1,9 +1,12 @@
-<table>
-  <tr>
-    <th>Название</th>
-    <th>Уровень</th>
-    <th>Количество вопросов</th>
-    <th>Действия</th>
-  </tr>
+<h1><%= t('.header')%></h1>
+  <table class="table table-bordered mt-3">
+    <thead>
+    <tr>
+      <th scope="col"><%= t('.title') %></th>
+      <th scope="col"><%= t('.level') %></th>
+      <th scope="col"><%= t('.question_count') %></th>
+      <th scope="col"><%= t('.actions') %></th>
+    </tr>
+    </thead>
   <%= render @tests %>
 </table>
