--- a/app/views/admin/_admin_header.html.erb
+++ b/app/views/admin/_admin_header.html.erb
@@ -1,13 +1,14 @@
-<header>
-  <div class="title">
-    <%= link_to  "Testguru | #{t('.admin_panel')}", admin_tests_path, method: :get %>
-  </div>
-  <div class="right-nav-bar">
+<nav class="navbar navbar-light bg-light">
+  <h1>
+    <%= link_to  "Testguru", tests_path, class: 'navbar-brand'%>
+    <span class="badge badge-secondary"><%= link_to  t('.admin_panel'), admin_tests_path, class: 'navbar-brand'%></span>
+    <%= link_to  t('.gists'), admin_gists_path, class: 'navbar-brand'%>
+  </h1>
+
+  <span class="navbar-text">
     <% if user_signed_in? %>
-      <p><%= t('.welcome', email: current_user.email) %></b>|
-    <%= button_to  t('.logout'), destroy_user_session_path, method: :delete %></p>
-    <% else %>
-      <%= link_to  t('.sign_up'), new_user_registration_path %>
-    <% end %>
-  </div>
-</header>
+      <%= t('.welcome', email: current_user.email) %></b> |
+      <%= link_to  t('.logout'), destroy_user_session_path, method: :delete %>
+  <% end %>
+  </span>
+</nav>
