--- a/app/views/admin/questions/_form.html.erb
+++ b/app/views/admin/questions/_form.html.erb
@@ -1,5 +1,5 @@
 <%= question_header(@question) %>
-  <%= form_with model: [:admin, @question], local: true do |form| %>
+<%= form_with model: [:admin, @test, @question], local: true do |form| %>
     <%= render 'shared/errors', resource: @question %>
     <p>
       <%= form.label :body %>
