--- a/app/views/admin/questions/_question.html.erb
+++ b/app/views/admin/questions/_question.html.erb
@@ -1,5 +1,5 @@
 <tr>
-  <td> <%= link_to question.body, admin_question_path(question), method: :get %> </td>
+  <td scope="row"> <%= link_to question.body, admin_question_path(question), method: :get %> </td>
   <td> <%= link_to  "Изменить", edit_admin_question_path(question), method: :get %> </td>
   <td> <%= button_to  "Удалить", admin_question_path(question), method: :delete, data: {confirm: 'Вы уверены?'} %> </td>
 </tr>
