--- a/app/views/admin/tests/index.html.erb
+++ b/app/views/admin/tests/index.html.erb
@@ -1,12 +1,16 @@
 <h1><%= t('.header')%></h1>
-<table>
+<table class="table table-bordered mt-3">
+  <thead>
   <tr>
-    <th><%= t('.title') %></th>
-    <th><%= t('.level') %></th>
-    <th><%= t('.author') %></th>
-    <th><%= t('.question_count') %></th>
-    <th colspan="3"><%= t('.actions') %></th>
+    <th scope="col"><%= t('.title') %></th>
+    <th scope="col"><%= t('.level') %></th>
+    <th scope="col"><%= t('.author') %></th>
+    <th scope="col"><%= t('.question_count') %></th>
+    <th colspan="2"><%= t('.actions') %></th>
   </tr>
+  </thead>
+  <tbody>
   <%= render @tests %>
+  </tbody>
 </table>
 <%= link_to  t('.add_test'), new_admin_test_path %>
