--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no ">
   <title>Testguru</title>
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
@@ -12,8 +14,10 @@
 <body>
 
 <%= render 'shared/header' %>
-<%= render 'shared/flash' %>
-<div class="main-content"><%= yield %></div>
+<div class="container">
+  <%= render 'shared/flash' %>
+  <%= yield %>
+</div>
 <%= render 'shared/footer' %>
 </body>
 </html>
