--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,7 +1,10 @@
-<footer>
-  <p><%= current_year %></p>
-  <p>Loginov Dmitry</p>
-  <p>Приложение для прохождения тестов</p>
-  <%= github_url('shrek4495', 'test') %>
-  <a href="https://thinknetica.com/">"Учебный проект в онлайн-школе Thinknetica"</a>
+<footer class="fixed-bottom row justify-content-center ml-3">
+  <div class="col-1"><%= current_year %></p></div>
+  <div class="col">Loginov Dmitry</div>
+  <div class="col-3">Приложение для прохождения тестов</div>
+  <div class="col"><%= github_url('shrek4495', 'test') %></div>
+  <div class="col-4">
+    <a href="https://thinknetica.com/">
+      "Учебный проект в онлайн-школе Thinknetica"</a>
+  </div>
 </footer>
