--- a/app/views/test_passages/show.html.erb
+++ b/app/views/test_passages/show.html.erb
@@ -1,8 +1,8 @@
 <h1>Прохождение теста <%= @test_passage.test.title %></h1>
 <p>Вопрос: <%= "#{@test_passage.current_question_index} из #{@test_passage.test.questions.count} "%></p>
-<b>
+<p>
   <%= @test_passage.current_question.body %>
-</b>
+</p>
 
 <%= form_with url: test_passage_path(@test_passage), local: true,  method: :put do |form| %>
   <%= form.collection_check_boxes :answers_ids, @test_passage.current_question.answers,
@@ -12,5 +12,6 @@
       <%= b.label %>
     </p>
   <% end %>
+  <p><%= link_to 'Gist Question', gist_test_passage_path(@test_passage), method: :post %></p>
   <p><%= form.submit 'Следующий',data: { turbo: false } %></p>
 <% end %>
