--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -1,10 +1,12 @@
 <h1><%= t('.header')%></h1>
-<table>
+<table class="table table-bordered mt-3">
+  <thead>
   <tr>
-    <th><%= t('.title') %></th>
-    <th><%= t('.level') %></th>
-    <th><%= t('.question_count') %></th>
-    <th><%= t('.actions') %></th>
+    <th scope="col"><%= t('.title') %></th>
+    <th scope="col"><%= t('.level') %></th>
+    <th scope="col"><%= t('.question_count') %></th>
+    <th scope="col"><%= t('.actions') %></th>
   </tr>
+  </thead>
   <%= render @tests %>
 </table>
