--- a/app/views/admin/tests/index.html.erb
+++ b/app/views/admin/tests/index.html.erb
@@ -2,7 +2,11 @@
 <table class="table table-bordered mt-3">
   <thead>
   <tr>
-    <th scope="col"><%= t('.title') %></th>
+    <th scope="col" class="sort-by-title pointer">
+      <%= t('.title') %>
+      <%= octicon 'arrow-up', class: 'text-success hide'%>
+      <%= octicon 'arrow-down', class: 'text-success hide'%>
+    </th>
     <th scope="col"><%= t('.level') %></th>
     <th scope="col"><%= t('.author') %></th>
     <th scope="col"><%= t('.question_count') %></th>
