--- a/app/views/admin/_admin_header.html.erb
+++ b/app/views/admin/_admin_header.html.erb
@@ -10,7 +10,7 @@
   <span class="navbar-text">
     <% if user_signed_in? %>
       <%= t('.welcome', email: current_user.email) %></b> |
-      <%= link_to  t('.logout'), destroy_user_session_path, method: :delete %>
+      <%= button_to  t('.logout'), destroy_user_session_path, method: :delete, data: {confirm: 'Вы уверены?'} %>
   <% end %>
   </span>
 </nav>
