--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -4,11 +4,12 @@
     <% if current_user&.admin? %>
       <span class="badge badge-secondary"><%= link_to  t('.admin_panel'), admin_tests_path, class: 'navbar-brand'%></span>
     <% end %>
+    <%= link_to t('.feedback'), new_feedback_form_path, class: 'navbar-brand' %>
   </h1>
   <span class="navbar-text">
       <% if user_signed_in? %>
       <%= t('.welcome', email: current_user.email) %></b> |
-      <%= link_to  t('.logout'), destroy_user_session_path, method: :delete %>
+      <%= button_to  t('.logout'), destroy_user_session_path, method: :delete %>
     <% else %>
       <%= link_to  t('.log_in'), new_user_session_path %></b> |
       <%= link_to  t('.sign_up'), new_user_registration_path %>
