--- a/app/views/admin/tests/_test.html.erb
+++ b/app/views/admin/tests/_test.html.erb
@@ -1,8 +1,16 @@
 <tr>
-  <td scope="row"><%= link_to test.title, admin_test_path(test), method: :get %></td>
-  <td><%= test.level %></td>
-  <td><%= test.author&.email %></td>
-  <td><%= test.questions.count %></td>
-  <td><%= link_to  t(".edit"), edit_admin_test_path(test), method: :get %> </td>
-  <td><%= button_to  t(".delete"), admin_test_path(test),  method: :delete  %>
+  <<td scope="row" class="aligh-middle">
+  <%= content_tag :span, test.title, class: 'test-title', data: {test_id: test.id}%>
+  <%= render 'form_inline', test: test == @test ? @test : test %>
+</td>
+  <td class="aligh-middle"><%= test.level %></td>
+  <td class="aligh-middle"><%= test.author&.email %></td>
+  <td class="aligh-middle"><%= test.questions.count %></td>
+  <td class="aligh-middle"><%= link_to  t(".show"), admin_test_path(test)%>
+  <td class="aligh-middle">
+    <%= link_to  t(".edit"), edit_admin_test_path(test),
+                 data: { test_id: test.id },
+                 class: 'form-inline-link'%>
+  </td>
+  <td class="aligh-middle"><%= button_to  t(".delete"), admin_test_path(test), method: :delete, data: {confirm: 'Вы уверены?'} %>
 </tr>
