add_badges correct

--- a/app/views/admin/_admin_header.html.erb
+++ b/app/views/admin/_admin_header.html.erb
@@ -2,7 +2,9 @@
   <h1>
     <%= link_to  "Testguru", tests_path, class: 'navbar-brand'%>
     <span class="badge badge-secondary"><%= link_to  t('.admin_panel'), admin_tests_path, class: 'navbar-brand'%></span>
+    <span class="badge badge-secondary"><%= link_to  t('.badge'), admin_badges_path, class: 'navbar-brand'%></span>
     <%= link_to  t('.gists'), admin_gists_path, class: 'navbar-brand'%>
+
   </h1>
 
   <span class="navbar-text">
