--- a/app/views/admin/tests/index.html.erb
+++ b/app/views/admin/tests/index.html.erb
@@ -10,6 +10,7 @@
     <th scope="col"><%= t('.level') %></th>
     <th scope="col"><%= t('.author') %></th>
     <th scope="col"><%= t('.question_count') %></th>
+    <th scope="col"><%= t('.time') %></th>
     <th colspan="2"><%= t('.actions') %></th>
   </tr>
   </thead>
