--- a/app/views/tests/index.html.erb
+++ b/app/views/tests/index.html.erb
@@ -9,6 +9,7 @@
     </th>
     <th scope="col"><%= t('.level') %></th>
     <th scope="col"><%= t('.question_count') %></th>
+    <th scope="col"><%= t('.time') %></th>
     <th scope="col"><%= t('.actions') %></th>
   </tr>
   </thead>
