--- a/app/views/admin/tests/_test.html.erb
+++ b/app/views/admin/tests/_test.html.erb
@@ -3,6 +3,7 @@
   <td><%= test.level %></td>
   <td><%= test.author&.email %></td>
   <td><%= test.questions.count %></td>
+  <td class="aligh-middle"><%= test.time %></td>
   <td><%= link_to  t(".edit"), edit_admin_test_path(test), method: :get %> </td>
   <td><%= button_to  t(".delete"), admin_test_path(test), method: :delete, data: {confirm: 'Вы уверены?'} %>
 </tr>
