--- a/app/views/shared/_errors.html.erb
+++ b/app/views/shared/_errors.html.erb
@@ -1,10 +1,10 @@
-<% if resource.errors.present? %>
-  <div>
-    <h2><%= t('.header', count: resource.errors.count) %>:</h2>
-    <ul>
-      <% resource.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
-      <% end %>
-    </ul>
-  </div>
-<% end %>
+<% if resource.present? && resource.errors.present?%>
+    <%= content_tag(:div, class: 'resource-errors', data: { resource_id: resource.try(:id) }) do %>
+      <h2><%= t('.header', count: resource.errors.count) %>:</h2>
+      <ul>
+        <% resource.errors.full_messages.each do |message| %>
+          <li><%= message %></li>
+        <% end %>
+      </ul>
+    <% end %>
+  <% end %>
